# hardware

陀螺仪/LSM6DS3TR_C/: .gitignore  README.md
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/IMU-3-LSM6DS3TRC/89C52/: SPI.c  SPI.h  UART.c  UART.h  delay.c  delay.h  i2c.c  i2c.h  lsm6ds3trc.c  lsm6ds3trc.h  main.c  main.h
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/IMU-3-LSM6DS3TRC/Raspberry Pi(PYthon)/: LSM6DS3TRC_Test.py  RTrobot_LSM6DS3TRC.py
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/IMU-3-LSM6DS3TRC/Raspberrypi Pico/: CMakeLists.txt  Readme  lsm6ds3trc.c  lsm6ds3trc.h  main.c
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/LSM6DS3TR_C/: LSM6DS3TR_C.ioc
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/LSM6DS3TR_C/MDK-ARM/: LSM6DS3TR_C.uvguix.ZIShen  LSM6DS3TR_C.uvoptx  LSM6DS3TR_C.uvprojx
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/LSM6DS3TR_C_IIC/: LSM6DS3TR_C.ioc
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/LSM6DS3TR_C_IIC/MDK-ARM/: LSM6DS3TR_C.uvguix.ZIShen  LSM6DS3TR_C.uvoptx  LSM6DS3TR_C.uvprojx
陀螺仪/LSM6DS3TR_C/LSM6DS3TR_C/LSM6DS3TR_C_IIC_t/MDK-ARM/: LSM6DS3TR_C.uvguix.ZIShen  LSM6DS3TR_C.uvoptx  LSM6DS3TR_C.uvprojx
陀螺仪/LSM6DS3TR_C/assets/板框/: 倾斜外轮廓线.dxf  倾斜模块.dxf
陀螺仪/LSM6DS3TR_C/src/APP/Gyroscope_APP/: Gyroscope_APP.ioc
陀螺仪/LSM6DS3TR_C/src/IAP/Gyroscope_IAP/: Gyroscope_IAP.ioc
陀螺仪/QMI8658/: 测试_库.md
陀螺仪/QMI8658/gyroscope/: gyroscope.ioc
陀螺仪/QMI8658/gyroscope/Core/Inc/: main.h
陀螺仪/QMI8658/gyroscope/Core/Src/: gpio.c  main.c  usart.c
陀螺仪/QMI8658/gyroscope/MDK-ARM/: gyroscope.uvguix.ZIShen  gyroscope.uvoptx  gyroscope.uvprojx
陀螺仪/QMI8658/gyroscope/mycode/Device/: Device_IIC.c  Device_IIC.h
陀螺仪/QMI8658/gyroscope/mycode/control/: control.c  control.h
(+95 files in other folders)
